# rag-kit

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pr-evaluate.yml
apps/huwei_landmarks/: line_bot.py  server.py
data/golden/: _download_manifest.json
tests/: evaluate.py  test_webhook.py
